# register-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  _typos.toml  biome.json  clippy.toml  compose.yml  deny.toml  justfile  lefthook.yml  pyproject.toml  release-please-config.json  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dev-image.yml  docs.yml  release-please.yml
crates/register-cli/: Cargo.toml
crates/register-cli/src/: cli.rs  logging.rs  main.rs  runner.rs
crates/register-cli/tests/: end_to_end.rs
crates/register-core/: Cargo.toml
crates/register-core/benches/: pipeline.rs
crates/register-core/src/: analyze.rs  bitplane.rs  error.rs  io.rs  lib.rs  page.rs  paper.rs  plan.rs  raster.rs  reference.rs
tools/: bbox_overlay.py  corpus_stack.py  diff_pages.py  overlay_diff.py  pdf_paper.py
