[workspace]
resolver = "3"
members = ["crates/register-cli", "crates/register-core"]
default-members = ["crates/register-cli", "crates/register-core"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/P4suta/register-rs"
authors = ["register-rs contributors"]
publish = false

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.5", default-features = false, features = [
  "html_reports",
  "cargo_bench_support",
] }
crossbeam-channel = "0.5"
globset = "0.4"
image = { version = "0.25", default-features = false, features = [
  "pnm",
  "png",
  "tiff",
] }
imageproc = { version = "0.26", default-features = false }
indicatif = { version = "0.18", features = ["rayon"] }
mimalloc = { version = "0.1", default-features = false }
predicates = "3"
proptest = "1"
tempfile = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

wildcard_imports = "deny"
mod_module_files = "deny"
or_fun_call = "deny"
unwrap_used = "deny"
# `expect("documented invariant")` IS the standard pattern for asserting
# panic-on-violation contracts (mutex poisoning, thread panics, etc.).
# Keep `unwrap_used` denied; that's the lazy form to police.
expect_used = "allow"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
allow_attributes_without_reason = "deny"
disallowed_macros = "deny"
disallowed_types = "deny"
disallowed_methods = "deny"

module_name_repetitions = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
redundant_pub_crate = "allow"

# Prose-style docs intentionally weave bare type names like `BitPage` /
# `GrayImage` into the surrounding text; demanding backticks on every
# mention is more friction than it buys.
doc_markdown = "allow"
# Marking every infallible single-line helper `const` is busywork that
# doesn't affect runtime — most can never be evaluated at compile time
# anyway since they take references or run inside generic code paths.
missing_const_for_fn = "allow"
# We're 64-bit-only by build target; the `as usize` casts on `i64` values
# already-clipped to `>= 0` and bounded by canvas dimensions can't truncate.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
# Pass-by-reference vs by-value for small Copy types: micro-tuning that
# the compiler optimises across in release. The `Projection` case where
# this fires is a 76-byte struct we don't want to copy on every render.
trivially_copy_pass_by_ref = "allow"
# Some doc lists start with names like `BitPage` that confuse the indent
# detector; we already indent visually.
doc_lazy_continuation = "allow"
# `dx`/`dy`, `src_w`/`src_h` and similar pairs are the natural vocabulary
# for graphics code; renaming them to satisfy this lint reduces readability.
similar_names = "allow"
# Block-scoped MutexGuards are dropped at the closing `}` — the lint asks
# for an explicit `drop(guard)` inside small blocks where it's just noise.
significant_drop_tightening = "allow"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"
elided_lifetimes_in_paths = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
static_mut_refs = "deny"
missing_docs = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3
overflow-checks = false

# Same fully-optimised release build, but with line-level DWARF and frame
# pointers preserved so that `samply` / `perf` / `cargo flamegraph` produce
# rich, addresses → source-line resolved output without re-running anything.
# Used by `just profile`.
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = "none"
split-debuginfo = "off"

[profile.dev]
opt-level = 0
debug = "full"

[profile.ci]
inherits = "dev"
debug = "line-tables-only"
incremental = false
