[package]
name = "register-cli"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI driver for register-rs: aligns scanned Japanese-novel pages onto a fixed paper-size canvas."

[[bin]]
name = "register"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
globset.workspace = true
indicatif.workspace = true
mimalloc.workspace = true
rayon.workspace = true
register-core = { path = "../register-core" }
thread_local.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
image.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
