[package]
name = "register-core"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Core registration library for register-rs: aligns scanned Japanese-novel pages onto a fixed paper-size canvas."

[package.metadata.cargo-rdme]
readme-path = "README.md"

[dependencies]
image.workspace = true
imageproc.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "pipeline"
harness = false

[lints]
workspace = true
